--- a/app/index.pug
+++ b/app/index.pug
@@ -1,13 +1,13 @@
 doctype html
 html.full.no-js(lang='en')
   head
-    if process.env.NODE_ENV === 'production'
-      script(src='https://www.googletagmanager.com/gtag/js?id=#{process.env.GA_CODE}' async)
+    if NODE_ENV === 'production'
+      script(src=`https://www.googletagmanager.com/gtag/js?id=${GA_CODE}` async)
       script.
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', '#{process.env.GA_CODE}');
+        gtag('config', '#{GA_CODE}');
 
     meta(name='package' content=`${pkg.name} v${pkg.version}`)
     meta(name='revision' content=SOURCE_VERSION)
@@ -27,7 +27,7 @@ html.full.no-js(lang='en')
     each i in [1, 2, 3, 4, 5, 6, 7, 10, 11, 12]
       link(rel='prefetch' href=`/images/${i}.png`)
 
-    import(from='main.less')
+    import(from='main.css app.css')
   body.full.reset
     import(from='sprites.svg')
     #app.v-flex.full
