fix: keep every two-players in a row

--- a/app/app.less
+++ b/app/app.less
@@ -87,7 +87,12 @@ body {
     min-width: 180px;
   }
   .player {
-    min-width: 200px;
+    min-width: 220px;
+  }
+}
+@media screen and (min-width: 960px) {
+  .player {
+    min-width: 320px;
   }
 }
 
