--- a/app/index.pug
+++ b/app/index.pug
@@ -27,7 +27,7 @@ html.full.no-js(lang='en')
     each i in [1, 2, 3, 4, 5, 6, 7, 10, 11, 12]
       link(rel='prefetch' href=`/images/${i}.png`)
 
-    import(from='main.css app.css')
+    import(from='app.css')
   body.full.reset
     import(from='sprites.svg')
     #app.v-flex.full
